--- a/bse/.cvsignore
+++ b/bse/.cvsignore
@@ -15,6 +15,7 @@ bseenum_list.c
 bsenotifier_array.c
 bsebuiltin_externs.c
 bsebuiltin_array.c
+bsebuffermixer_gen.c
 bsegentypes.c
 bsegentype_array.c
 bsequery
