added pattern group support: bse_song_get_default_pattern_group(),
Mon Mar  6 23:47:46 2000  Tim Janik  <timj@gtk.org>

        * bsesong.[hc]: added pattern group support:
        bse_song_get_default_pattern_group(),
        bse_song_insert_pattern_group_link(),
        bse_song_insert_pattern_group_copy() and
        bse_song_remove_pattern_group_entry().

        * bsepatterngroup.[hc]: new maintenance object to keep track of
        patterns, grouped together for arranger parts.

        * bseitem.[hc] (bse_item_queue_seqid_changed): made seqid_changed() an
        async notification.

svn path=/trunk/; revision=216

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -77,6 +77,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bseparam.h \
 	bseparasite.h \
 	bsepattern.h \
+	bsepatterngroup.h \
 	bsepcmdevice.h \
 	bsepcmdevice-oss.h \
 	bsepcmdevice-alsa.h \
@@ -127,6 +128,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseparam.c \
 	bseparasite.c \
 	bsepattern.c \
+	bsepatterngroup.c \
 	bsepcmdevice.c \
 	bsepcmdevice-oss.c \
 	bsepcmdevice-alsa.c \
