--- a/beast-gtk/icons/Makefile.icons
+++ b/beast-gtk/icons/Makefile.icons
@@ -5,9 +5,11 @@ icon_list += no_ilink.c
 icon_list += no_olink.c
 icon_list += noicon.c
 icon_list += palette.c
+icon_list += pattern-group.c
 icon_list += pattern-tool.c
 icon_list += pattern.c
 icon_list += properties.c
+icon_list += target.c
 icon_list += trashcan.c
 icon_list += trashsmall.c
 icon_list += close.xcf
@@ -15,9 +17,11 @@ icon_list += mouse_tool.xcf
 icon_list += no_olink.xcf
 icon_list += noicon.xcf
 icon_list += palette.xcf
+icon_list += pattern-group.xcf
 icon_list += pattern-tool.xcf
 icon_list += pattern.xcf
 icon_list += properties.xcf
+icon_list += target.xcf
 icon_list += trashcan.xcf
 icon_list += trashsmall.xcf
 ## Generated data ends here
