a TB-303 filter clone based on the VCF303 portions of gsyn v0.2. code
Wed Mar  8 16:29:56 2000  Tim Janik  <timj@gtk.org>

        * davbassfilter.[hc]: a TB-303 filter clone based on the VCF303 portions
        of gsyn v0.2. code partly copyright by Andy Sloane.
        plugin provided by David A. Bartold <foxx@mail.utexas.edu>.

        * davcanyondelay.c (dav_canyon_delay_class_init): feedback parameter
        description patch from David A. Bartold <foxx@mail.utexas.edu>.

svn path=/trunk/; revision=222

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -67,6 +67,14 @@ bsenoise_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += bsenoise.h
 
 ##
+## Plugin davbassfilter
+##
+davbassfilter_la_SOURCES = davbassfilter.c
+davbassfilter_la_LDFLAGS = -module -avoid-version
+davbassfilter_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += davbassfilter.h
+
+##
 ## Plugin davcanyondelay
 ##
 davcanyondelay_la_SOURCES = davcanyondelay.c
@@ -121,6 +129,7 @@ plugin_LTLIBRARIES += \
 	bsemixer.la \
 	bsemult.la \
 	bsenoise.la \
+	davbassfilter.la \
 	davcanyondelay.la \
 	davorgan.la \
 	davsyndrum.la \
