New plugin icons, kindly submitted by Cyria Arweiler
Fri Mar 10 00:10:04 2000  Tim Janik  <timj@gtk.org>

        * icons/canyon.xcf:
        * icons/filter.xcf:
        * icons/noise.xcf: New plugin icons,
        kindly submitted by Cyria Arweiler <c_arweiler@yahoo.com>.

        * davcanyondelay.c:
        * bsefirfilter.c:
        * bsenoise.c: include the new icons.

svn path=/trunk/; revision=224

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -2,8 +2,11 @@
 icon_list += ampmix.c
 icon_list += any.c
 icon_list += atan.c
+icon_list += canyon.c
 icon_list += drum.c
+icon_list += filter.c
 icon_list += noicon.c
+icon_list += noise.c
 icon_list += organ.c
 icon_list += pipe.c
 icon_list += prod.c
@@ -13,8 +16,11 @@ icon_list += sub.c
 icon_list += sum.c
 icon_list += ampmix.xcf
 icon_list += atan.xcf
+icon_list += canyon.xcf
 icon_list += drum.xcf
+icon_list += filter.xcf
 icon_list += noicon.xcf
+icon_list += noise.xcf
 icon_list += organ.xcf
 icon_list += pipe.xcf
 icon_list += prod.xcf
