shame, mkcalls.pl was missing from extra_sources
svn path=/trunk/; revision=234

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -179,6 +179,7 @@ bse_extra_sources = @STRIP_BEGIN@ \
 	mkbuiltinlist.pl \
 	mkenums.pl \
 	mktypes.pl \
+	mkcalls.pl \
 	bseconfig.h.in \
 	bseparamcol.c \
 	bsebuffermixercore.c \
