port over from BSE to GLib type system.
Fri Mar 24 09:44:26 2000  Tim Janik  <timj@gtk.org>

        * *.[hc]: port over from BSE to GLib type system.

Fri Mar 24 01:08:44 2000  Tim Janik  <timj@gtk.org>

        * icons/canyon.xcf:
        * icons/filter.xcf:
        * icons/noise.xcf: Updated plugin icons, from Cyria Arweiler.

        * icons/filter.xcf: bit of retouchee on my part to make the
        inner side darker.

        * davcanyondelay.c:
        * bsefirfilter.c:
        * bsenoise.c: include the new icons.

Thu Mar 23 23:39:07 2000  Tim Janik  <timj@gtk.org>

        * davxtalstrings.[hc]: new string synthesizer plugin from
        David A. Bartold.

        * davguitar.[hc]: new physical modelling acoustic guitar
        synthesizer from David A. Bartold.

svn path=/trunk/; revision=237

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -45,7 +45,7 @@ if IF_HAVE_PERL5
 	  --vhead "static Bse@Type@Value @enum_name@_values[] = {" \
 	  --vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
 	  --vtail "  { 0, NULL, NULL }\n};\n" \
-	  --vtail "static BseType BSE_TYPE_ID (@EnumName@);" \
+	  --vtail "static GType   BSE_TYPE_ID (@EnumName@);" \
 	    $< > xgen-enums \
 	&& $(PERL) $(mkenums) \
 	  --hprod "\n#include\t<bse/bseexports.h>\n" \
