port over from BseParam to GValue and [GB]ParamSpecs.
Tue Apr 11 04:23:08 2000  Tim Janik  <timj@gtk.org>

        * *.[hc]: port over from BseParam to GValue and [GB]ParamSpecs.

svn path=/trunk/; revision=245

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -14,6 +14,7 @@ plugindir = $(bseplugindir)
 
 # all plugins want to link against:
 plugin_libs = $(BSE_LIBS) -lm
+# plugin_ldlibs = $(top_builddir)/bse/libbse.la $(top_builddir)/blib/libblib.la
 
 # create plugin list
 Makefile.plugins: $(srcdir)/listplugins.sh *.c Makefile.am
