ported everything BSE over to the new GLib type system.
Tue Apr 11 04:02:47 2000  Tim Janik  <timj@gtk.org>

        * ported everything BSE over to the new GLib type system.

        * BseParam* got nuked.

        * *.[hc]: port over to use GValue instead of BseParam, use
        GParamSpec* and BParamSpec structures instead of BseParamSpec*
        and BseObjectParamSpec.
        pitfall: [bg]_param_spec_* () creation functions in general
        take minimum, maximum, default_value, stepping_rate now (swapped
        stepping_rate and default_value from the old bse_param_spec_*()
        functions).

        * *.[hc]: port objects over to GType and GObject, most objects
        perform their cleanups in BseObjectClass.destroy() now.
        finalize() got moved to GObject.
        shutdown() got moved to GObject and shouldn't normally be
        used by object implementations.
        BseObject is a derived type of GObject now.

        * bseobject.[hc]: apart from porting this over to GObject derivation,
        a bunch of its implementation vanished, such as parameter set/get
        facilities, reference counting and finalization.
        nuked old BseInterface cruft.

        * bseprocedure.[hc]: port over to GValue from BseParam, that means
        in/out values are now matched by position, and automated value
        conversion is performed where applicable.

        * bsestorage.[hc]: port over from BseParam to GValue. we still
        provide all means for loading and saving in this place, rather
        than implementing it as virtual functions in the ParamSpec
        classes. to switch() identify the non-fundamental param types,
        we now use BLib's B_SEQ_PARAM_* id facility.

        * bsetype.[hc]: nuked most of the rest of the file contents,
        all param types are now introduced and implemented in BLib.

        * miscellaneous related code cleanups.

Mon Apr  3 17:05:32 2000  Tim Janik  <timj@gtk.org>

        * bsemagic.[hc]: file magic

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -94,10 +94,6 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsesuper.h \
 	bsetype.h \
 	bseutils.h \
-	glib-extra.h \
-	glib-genums.h \
-	glib-gobject.h \
-	glib-gtype.h \
 @STRIP_END@
 # BSE header files that don't get installed
 bse_private_h_sources = @STRIP_BEGIN@ \
@@ -149,10 +145,6 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bsetype.c \
 	bseutils.c \
 	bsevoice.c \
-	glib-extra.c \
-	glib-genums.c \
-	glib-gobject.c \
-	glib-gtype.c \
 @STRIP_END@
 # we use our own built_sources variable rules instead of BUILT_SOURCES,
 # since handles BUILT_SOURCES strange and wrong on some occasions (mostly
@@ -187,7 +179,6 @@ bse_extra_sources = @STRIP_BEGIN@ \
 	mktypes.pl \
 	mkcalls.pl \
 	bseconfig.h.in \
-	bseparamcol.c \
 	bsebuffermixercore.c \
 @STRIP_END@
 
@@ -317,19 +308,21 @@ all: @MISSING_ETAGS@ @BIRNET_Y@ # TAGS
 #
 # other programs, we want to compile
 #
-noinst_PROGRAMS = bsequery testtypes testsample testsong testrefs
+noinst_PROGRAMS = bsequery bsemagic testtypes testsample testsong testrefs
 # source files
 testtypes_SOURCES = testtypes.c
 testrefs_SOURCES = testrefs.c
 testsample_SOURCES = testsample.c
 bsequery_SOURCES = bsequery.c
+bsemagic_SOURCES = bsemagictest.c
 testsong_SOURCES = testsong.c
 # link programs against BSE
-progs_LDADD = libbse.la
+progs_LDADD = libbse.la $(top_builddir)/blib/libblib.la
 testtypes_LDADD = $(progs_LDADD)
 testrefs_LDADD = $(progs_LDADD)
 testsample_LDADD = $(progs_LDADD)
 bsequery_LDADD = $(progs_LDADD)
+bsemagic_LDADD = $(progs_LDADD)
 testsong_LDADD = $(progs_LDADD)
 
 
