port over to use GParamSpec, GValue and for GObject hirarchy base type.
Tue Apr 11 04:23:56 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstgconfig.[hc]: port over to use GParamSpec, GValue
        and for GObject hirarchy base type.

        * beast-gtk/bstparam.[hc]: operate on a GValue+GParamSpec,
        instead of BseParam now. use BLib's B_SEQ_PARAM_* ids to
        implement the switch()es.

        * beast-gtk/bstprocedure.[hc]: parameter/value port. this
        introduced some API changes, mostly wrg preset parameters,
        they need to be set incrementally now from a value+name
        pair.

        * beast-gtk/bstpatterndialog.c: port over to new procedure
        API and GValue/BParamSpec.

Thu Mar 30 16:58:14 2000  Tim Janik  <timj@gtk.org>

        * configure.in: setup BLIB_CFLAGS, BLIB_LIBS and generate
        blib/Makefile and blib/blibconfig.h.

svn path=/trunk/; revision=248

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -19,7 +19,7 @@ DEFS += $(strip \
 )
 
 # link programs against BSE and other neccessary libraries
-progs_LDADD = $(top_builddir)/bse/libbse.la $(LDFLAGS) $(BEAST_LIBS)
+progs_LDADD = $(top_builddir)/blib/libblib.la $(top_builddir)/bse/libbse.la $(LDFLAGS) $(BEAST_LIBS)
 beast_LDADD = $(progs_LDADD)
 
 
