the default base_octave is 1 after the (not-so-)recent octave revamp.
Sun Apr 30 04:35:18 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpatterneditor.c (bst_pattern_editor_init): the
        default base_octave is 1 after the (not-so-)recent octave revamp.

svn path=/trunk/; revision=259

--- a/configure.in
+++ b/configure.in
@@ -412,7 +412,7 @@ MISSING_PYTHON=#
 MISSING_FOLD=#
 MISSING_INDENT=#
 MISSING_ETAGS=#
-if test -n "$PERL" && perl -v | grep 'version 5.' > /dev/null ; then
+if test -n "$PERL" && $PERL -e 'exit !($] >= 5.002)' > /dev/null ; then
     MISSING_PERL5=
 fi
 if test -n "$PYTHON" && python -c "import sys ; print sys.version" | grep '^1.5.' > /dev/null ; then
