some Make 3.79 $(strip ) versions are broken and require an empty arg,
Thu May  4 02:04:46 2000  Tim Janik  <timj@gtk.org>

        * configure.in (STRIP_DUMMY): some Make 3.79 $(strip ) versions are
        broken and require an empty arg, give it to them.

svn path=/trunk/; revision=260

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -108,8 +108,8 @@ beast_extra_sources = $(strip \
 	bstdragpattern.c \
 )
 # BEAST built sources that don't get installed
-beast_built_sources = $(strip \
-)
+beast_built_sources = @STRIP_BEGIN@ \
+@STRIP_END@
 
 #
 # setup BEAST sources and their dependancies
