--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -3,6 +3,7 @@ icon_list += ampmix.c
 icon_list += any.c
 icon_list += atan.c
 icon_list += canyon.c
+icon_list += chorus.c
 icon_list += drum.c
 icon_list += filter.c
 icon_list += noicon.c
@@ -19,6 +20,7 @@ icon_list += atan.xcf
 icon_list += canyon.xcf
 icon_list += drum.xcf
 icon_list += filter.xcf
+icon_list += foo.xcf
 icon_list += noicon.xcf
 icon_list += noise.xcf
 icon_list += organ.xcf
