display instrument id as a hexadecimal number.
Wed May 24 23:59:15 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstinstrumentview.c: display instrument id as a
        hexadecimal number.

        * beast-gtk/bstitemview.[hc] (bst_item_view_set_id_formate): allow
        customization of id format string.

        * beast-gtk/bstpatterneditor.c (INSTRUMENT_FMT): display instrument id
        as a hexadecimal number.

Tue May 23 18:15:52 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstparam.c (bst_param_create): parameter option menus need
        to grab focus when clicked, like all other parameter widgets do.

        * docs/interpolation.txt: a word on cubic interpolation.

svn path=/trunk/; revision=264

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -7,6 +7,7 @@ private_docs = $(strip \
 	bse-categories.txt \
 	bse-data-v1.txt \
 	bse-typesystem.txt \
+	interpolation.txt \
 )
 build_tools = $(strip \
 	faq.dat \
