use hash_table_remove not insert(NULL) to remove nodes.
Sat Oct  6 15:11:25 2001  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpatterneditor.c (bst_pattern_editor_class_set_key): use
        hash_table_remove not insert(NULL) to remove nodes.

        * beast-gtk/bstcanvassource.c (csource_info_update): show type blurb in
        info window.

Sat Oct  6 14:27:39 2001  Tim Janik  <timj@gtk.org>

        * gslglibhash.cc: new GHashTable implementation in c++ from
        stefan, that doesn't use SGI specific classes.

        * gslglibhashtest.cc (main): new file from stefan to test hashtable.

        * bseitem.proc: add procedure to retrieve type blurb of an item.

svn path=/trunk/; revision=284

--- a/configure.in
+++ b/configure.in
@@ -279,6 +279,7 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 MC_PROG_CC_WITH_CFLAGS
 MC_PROG_CXX_WITH_CXXFLAGS
 AC_PROG_CPP
+AC_PROG_CXX
 AC_PROG_CXXCPP
 AC_C_CONST
 AC_C_INLINE
