--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -25,6 +25,7 @@ icon_list += ampmix.xcf
 icon_list += atan.xcf
 icon_list += canyon.xcf
 icon_list += const.xcf
+icon_list += cyria-filter.xcf
 icon_list += drum.xcf
 icon_list += filter.xcf
 icon_list += foo.xcf
